--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
     <div id="terminal">
         <div id="output">
-            <p>Welcome to My Command Prompt</p>
-            <p>Type 'help' for a list of available commands.</p>
+            <p class="white-text">Welcome to my portfolio</p>
+            <p class="white-text">Type 'help' for a list of available commands- Alfie.</p>
         </div>
-        <div id="input-line" contenteditable="true" onkeydown="handleKeyDown(event)">
-            <span>&gt; </span>
+        <div id="input-line">
+            <span class="green-text">me@alfieSite</span><span class="white-text">:</span><span class="blue-text">/home/usr/me</span><span class="white-text">$ </span><input class="white-text" type="text" id="commandLine" onkeydown="handleKeyDown(event)">
         </div>
     </div>
     <script src="script.js"></script>
