--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+    <meta charset="UTF-8">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -34,7 +35,7 @@
         <div id="terminal">
             <div id="output">
                 <p class="white-text">Welcome to my portfolio</p>
-                <p class="white-text">Type 'help' for a list of available commands- Alfie.</p>
+                <p class="white-text">Type '<a href="#" class="blue-text" onclick="commandHyperlink('help')">help</a>' for a list of available commands- Alfie.</p>
             </div>
             <div id="input-line">
                 <span class="green-text">me@alfieSite</span><span class="white-text">:</span><span class="blue-text">/home/usr/me</span><span class="white-text">$ </span><input class="white-text" type="text" id="commandLine" onkeydown="handleKeyDown(event)">
