--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
 </head>
 <body>
     <!-- Desktop content -->
+    <script>
+        window.onload = function() {
+          document.getElementById("commandLine").focus();
+        };
+    </script>
     <div class="desktop-content">
         <div id="terminal">
             <div id="output">
@@ -38,7 +43,7 @@
                 <p class="white-text">Type '<a href="#" class="blue-text" onclick="commandHyperlink('help')">help</a>' for a list of available commands- Alfie.</p>
             </div>
             <div id="input-line">
-                <span class="green-text">me@alfieSite</span><span class="white-text">:</span><span class="blue-text">/home/usr/me</span><span class="white-text">$ </span><input class="white-text" type="text" id="commandLine" onkeydown="handleKeyDown(event)">
+                <span class="green-text">me@alfieSite</span><span class="white-text">:</span><span class="blue-text">/home/usr/me</span><span class="white-text">$ </span><input class="user-input" type="text" id="commandLine" onkeydown="handleKeyDown(event)">
             </div>
         </div>
     </div>
